--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-Flask
-openai
-requests
-pydub
-docxtpl
-python-docx
-flask-cors
-ffmpeg-python
-elevenlabs==1.1.0
-
+Flask==2.3.2
+flask-cors==4.0.0
+openai==1.30.1
+elevenlabs==0.2.27
+requests==2.31.0
+pydub==0.25.1
+docxtpl==0.16.7
+python-docx==1.1.0
+ffmpeg-python==0.2.0
